# app/schemas/portfolio.py
@@ -16,7 +16,8 @@ class Portfolio(PortfolioBase):
     id: int
     user_id: int
     stocks: List[Stock] = []
-    total_value: float = 0.0
+    current_market_value: float = 0.0
+    total_cost_basis: float = 0.0
 
     class Config:
         from_attributes = True
